cog_schemars/tests/ui/example_fn.stderr
error: `example` value must be an expression, and string literals that may be interpreted as function paths are currently disallowed to avoid migration errors (this restriction may be relaxed in a future version of cog_schemars).
       If you want to use the result of a function, use `#[cog_schemars(example = my_fn())]`.
       Or to use the string literal value, use `#[cog_schemars(example = &"my_fn")]`.
 --> tests/ui/example_fn.rs:4:26
  |
4 | #[cog_schemars(example = "my_fn")]
  |                          ^^^^^^^
